--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
   color: #fff;
+  /* min-height: 2000px; */
 }
 
 /* Navbar */
@@ -24,7 +25,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 7%;
-  background-color: rgba(1, 1, 1, 0.8%);
+  background-color: rgba(1, 1, 1, 0.858);
   border-bottom: 1px solid var(--primary);
   position: fixed;
   top: 0;
@@ -33,30 +34,30 @@ body {
   z-index: 9999;
 }
 
-.navbar .navbar-logo {
+.navbar .navbar-nama {
   font-size: 2rem;
   font-weight: 700;
   color: #ffffff;
   font-style: italic;
 }
 
-.navbar .navbar-logo {
+.navbar .navbar-nama {
   color: var(--primary);
 }
 
-.navbar .navbar-logo span {
+.navbar .navbar-nama span {
   color: var(--primary);
 }
 
-.navbar .navbar-logo bdi {
+.navbar .navbar-nama bdi {
   color: var(--pr);
 }
 
 .navbar .navbar-nav a {
   color: #fff;
   display: inline-block;
-  font-size: 1, 3rem;
-  margin: 0 1em;
+  font-size: 1.2rem;
+  margin: 0 1rem;
 }
 .navbar .navbar-nav a:active {
   transform: scale(0.95); /* sedikit mengecil saat ditekan */
@@ -95,6 +96,71 @@ body {
 #menu {
   display: none;
 }
+
+/* Hero Section */
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("../images/foto-bg.jpg"); /*kenapa ada titik titik sles didepan? dikarenakan kita buat nya di file css, jadi kita perlu ngerularin dulu dari file css dan masuk ke folder images menggunakan titik titik  */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(1, 1, 3, 1) 3%,
+    rgba(255, 255, 255, 0) 50%
+  );
+}
+
+.hero .content {
+  padding: 1.4rem 7%;
+  max-width: 60rem;
+}
+
+.hero .content h1 {
+  font-size: 5rem;
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1.2;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+  display: inline-block; /* Supaya background pas di teks saja */
+}
+
+.hero .content h1 span {
+  color: var(--primary);
+}
+
+.hero .content .cta {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: var(--bg);
+  border-radius: 20rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+
+.hero .content a:hover {
+  color: var(--primary);
+}
+
+.hero .content a:active {
+  transform: scale(0.95); /* sedikit mengecil saat ditekan */
+}
+
 /* media queries */
 
 /* laptop */
