--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --primary: rgb(11, 218, 183);
-  --bg: #010101;
+  --bg: #163a38;
 }
 
 * {
@@ -16,7 +16,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
   color: #fff;
-  /* min-height: 2000px; */
+  min-height: 3000px;
 }
 
 /* Navbar */
@@ -25,7 +25,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 7%;
-  background-color: rgba(1, 1, 1, 0.858);
+  background-color: rgba(16, 33, 31, 0.858);
   border-bottom: 1px solid var(--primary);
   position: fixed;
   top: 0;
@@ -81,7 +81,7 @@ body {
 }
 
 .navbar .navbar-extra a {
-  color: #fff;
+  color: #ffffff;
   margin: 0 0.5rem;
 }
 
@@ -107,6 +107,8 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../images/foto-bg.jpg");
 }
 
 .hero::after {
@@ -118,8 +120,8 @@ body {
   bottom: 0;
   background: linear-gradient(
     0deg,
-    rgba(1, 1, 3, 1) 3%,
-    rgba(255, 255, 255, 0) 50%
+    rgba(22, 58, 56, 1) 3%,
+    rgba(22, 58, 56, 0) 50%
   );
 }
 
@@ -135,7 +137,6 @@ body {
   line-height: 1.2;
   border-radius: 1rem;
   padding: 1rem 2rem;
-  display: inline-block; /* Supaya background pas di teks saja */
 }
 
 .hero .content h1 span {
@@ -144,13 +145,14 @@ body {
 
 .hero .content .cta {
   margin-top: 1rem;
+  margin-left: 2rem;
   display: inline-block;
-  padding: 1rem 3rem;
+  padding: 1rem 2rem;
   font-size: 1.4rem;
   color: #fff;
   background-color: var(--bg);
-  border-radius: 20rem;
-  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  border-radius: 1rem;
+  box-shadow: 1px 1px 3px rgba(255, 253, 253, 0.668);
 }
 
 .hero .content a:hover {
@@ -159,6 +161,78 @@ body {
 
 .hero .content a:active {
   transform: scale(0.95); /* sedikit mengecil saat ditekan */
+}
+
+/* About Section */
+.about,
+.member {
+  padding: 7rem 7% 1.4rem;
+}
+
+.about h2,
+.member h2 {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+
+.about h2 span,
+.member h2 span {
+  color: var(--primary);
+}
+
+.about .row {
+  display: flex;
+}
+
+.about .row .about-img {
+  flex: 1 1 45rem;
+}
+
+.about .row .about-img img {
+  width: 100%;
+}
+
+.about .row .content {
+  flex: 1 1 35rem;
+  padding: 0 1rem;
+}
+
+.about .row .content h3 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+.about .row .content p {
+  margin-bottom: 0.8rem;
+  font-size: 1.1rem;
+  font-weight: 100;
+  line-height: 1.6;
+}
+
+/* Member section */
+
+.member .anggota .halamannasrul {
+  margin-top: 1rem;
+  margin-left: 2rem;
+  display: inline-block;
+  padding: 1rem 2rem;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: #465351;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 3px rgba(255, 253, 253, 0.668);
+}
+
+.member .anggota :hover {
+  color: var(--primary);
+}
+
+.member .anggota :active {
+  transform: scale(0.95);
+}
+
+#map-pin {
+  display: inline-block;
 }
 
 /* media queries */
@@ -206,6 +280,29 @@ body {
 
   .navbar .navbar-nav a:hover::after {
     transform: scaleX(0.2);
+  }
+
+  .about .row {
+    flex-wrap: wrap;
+  }
+
+  .about .about-img img {
+    height: 24rem;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+
+  .about .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+
+  .about .row .content p {
+    font-size: 1.6rem;
   }
 }
 
